# track_position_ar-tag

./: CMakeLists.txt  README-en.md  README-pt.md  README.en.md  README.md  package.xml  readmeEN.md  readmePT_BR.md
Alvaro/: CMakeLists.txt  package.xml
Alvaro/launch/: ar_tracker_alvar-antigo.launch  calibration_camera.ini  identifica_ar.launch  liga_camera.launch
Alvaro/mapa/: swarm-robots-ARtag.ttt
Alvaro/scripts/: arpose2point.py  navegar_ate_ponto.py
config/rviz/: rviz_config.rviz
displacement_analises_ros/: CMakeLists.txt  package.xml
float32multiarray_to_pointcloud2/robots/: escravo0.urdf  escravo1.urdf  escravo2.urdf  escravos.STL  lider.STL  lider.urdf
float32multiarray_to_pointcloud2/script/: Fuzzy_desvio_obstaculo.py  Fuzzy_posicao.py  m03.py  m09.py  monitoramento_ambiente.py  mux_cmd_vel.py  navegar_ate_ponto.py  pega_posicoes_cria_lista.py  publica_odom_invertido.py
launch/: ar_tracker_alvar.launch  track_position_ARtag.launch
msg/: info.msg  infoVector.msg
nav_hector-slam_and_move-base_ros/: CMakeLists.txt  package.xml
nav_hector-slam_and_move-base_ros/Rviz/: hector.rviz
nav_hector-slam_and_move-base_ros/launch/: amcl.launch  hector_mapping.launch  inicia_dinamico.launch  inicia_estatico.launch  move_base.launch  pcl_to_laser.launch  slam_start.launch
nav_hector-slam_and_move-base_ros/param/: costmap_common_params.yaml  global_costmap_params.yaml
nav_hector-slam_and_move-base_ros/script/: hector_to_odom.py  pega_posicoes_cria_lista.py
nav_move_base/: CMakeLists.txt  package.xml
nav_move_base/Rviz/: hector.rviz
nav_move_base/launch/: amcl.launch  (+2 more)
scripts/: track_position_ARtag.py
(+19 files in other folders)
